--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,25 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script>
+  window.botpressWebChat.init({
+      "composerPlaceholder": "Celestia",
+      "botConversationDescription": " ",
+      "botId": "bb8af0f8-ca4a-461f-9634-375c40e523f8",
+      "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
+      "messagingUrl": "https://messaging.botpress.cloud",
+      "clientId": "bb8af0f8-ca4a-461f-9634-375c40e523f8",
+      "webhookId": "46957290-e155-45f3-a1b7-437d21bf8687",
+      "lazySocket": true,
+      "themeName": "prism",
+      "frontendVersion": "v1",
+      "showPoweredBy": true,
+      "theme": "prism",
+      "themeColor": "#2563eb"
+  });
+</script>
 </body>
 
 </html>
