--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 <script>
   window.botpressWebChat.init({
       "composerPlaceholder": "Celestia",
-      "botConversationDescription": " ",
+    // "layoutHeight": "100%25",
       "botId": "bb8af0f8-ca4a-461f-9634-375c40e523f8",
       "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
       "messagingUrl": "https://messaging.botpress.cloud",
@@ -35,7 +35,7 @@
       "lazySocket": true,
       "themeName": "prism",
       "frontendVersion": "v1",
-      "showPoweredBy": true,
+      "showPoweredBy": false,
       "theme": "prism",
       "themeColor": "#2563eb"
   });
