--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
-  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<!--   <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 <script>
   window.botpressWebChat.init({
       "composerPlaceholder": "Celestia",
@@ -39,7 +39,7 @@
       "theme": "prism",
       "themeColor": "#2563eb"
   });
-</script>
+</script> -->
 </body>
 
 </html>
